<resources>
    <string name="app_name">AgriClimate</string>
    <string name="vision">Helping the feeders</string>
    <string name="irrigation_planning">Irrigation Planning</string>
    <string name="home">Home</string>
    <string name="crop_guidelines">Crop Guidelines</string>
    <string name="crop_selection">Crop Selection</string>
    <string name="pest_control_measures">Pest Control Measures</string>
    <string name="funding_schemes">Funding Schemes</string>
    <string name="contact_for_help">Contact For Help</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>