<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_crop_guidelines"
            android:icon="@drawable/baseline_description_24"
            android:title="@string/crop_guidelines" />

        <item
            android:id="@+id/nav_irrigation"
            android:icon="@drawable/baseline_water_24"
            android:title="@string/irrigation_planning" />

        <item
            android:id="@+id/nav_crop_selection"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/crop_selection" />

    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_description_24"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/baseline_rate_review_24"
                android:title="@string/rate_us" />
        </menu>

    </item>

</menu>